--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
         android:id="@+id/frame_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -19,8 +18,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score:"
-        android:textColor="@color/white"
+        android:text="0"
+        android:textSize="35sp"
+        android:layout_margin="120dp"
+        android:textColor="#2E2E2E"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +31,10 @@
         android:id="@+id/textViewUpper"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score:"
-        android:textColor="@color/white"
+        android:layout_margin="120dp"
+        android:text="0"
+        android:textSize="35sp"
+        android:textColor="#2E2E2E"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/frame_content" />
