--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -37,6 +37,22 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.374" />
 
+
+    <Button
+        android:id="@+id/play_gamemode2_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:text="Game mode2 "
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.507" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="151dp"
