--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -30,7 +30,7 @@
         android:background="@color/black"
         android:fontFamily="@font/bungee_shade"
         android:textSize="25sp"
-        android:text="Start"
+        android:text="pong"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:text="Game mode2 "
+        android:text="Survival"
         android:textColor="@color/white"
         android:fontFamily="@font/bungee_shade"
         android:textSize="25sp"
