--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -9,12 +9,12 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="299dp"
-        android:layout_height="97dp"
+        android:layout_width="295dp"
+        android:layout_height="150dp"
         android:fontFamily="@font/bungee_shade"
         android:gravity="center"
         android:shadowColor="@color/cardview_light_background"
-        android:text="Smooth Fighters"
+        android:text="Smooth Fighters  BETA"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,7 +30,7 @@
         android:background="@color/black"
         android:fontFamily="@font/bungee_shade"
         android:textSize="25sp"
-        android:text="pong"
+        android:text="Pong Game"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:text="Survival"
+        android:text="Survival Game"
         android:textColor="@color/white"
         android:fontFamily="@font/bungee_shade"
         android:textSize="25sp"
