Vi la till kommentarer inför redovisning sprint 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="120dp"
-        android:text="0"
+        android:text=""
         android:fontFamily="@font/bungee_shade"
         android:textColor="@color/white"
         android:textSize="35sp"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="120dp"
         android:fontFamily="@font/bungee_shade"
-        android:text="0"
+        android:text=""
         android:textColor="@color/white"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
